# SoftwareProject

./: CMakeLists.txt  ExtModeForMain.c  ExtModeForMain.cpp  ExtModeForMain.h  KNearestSearch.c  KNearestSearch.h  SPArrayTest.make  SPBPriorityQueue.c  SPBPriorityQueue.h  SPConfig.c  SPConfig.h  SPConfigTest.make  SPImageProc.cpp  SPImageProc.h  SPKDArray.c  SPKDArray.h  SPKDTree.c  SPKDTree.h  SPLogger.c  SPLogger.h  SPLoggerTest.make  SPMainAuxTest.make  SPPoint.c  SPPoint.h  SPTreeTest.make  main.cpp  main_aux.cpp  main_aux.h  makefile  makefile.make  sp_kdtree_unit_test.c  sp_logger_unit_test.c  spcbir.config
unit_tests/: fail_test4.config  sp_config_unit_test.c  sp_kd_array_unit_test.c  sp_kdtree_unit_test.c  sp_logger_unit_test.c  sp_main_aux_unit_test.c  sp_main_aux_unit_test.cpp  unit_test_util.h
unit_tests/config_files/: config_for_main_aux_minimal_gui_tester.config  fail_test1.config  fail_test10.config  fail_test11.config  fail_test12.config  fail_test13.config  fail_test14.config  fail_test15.config  fail_test16.config  fail_test17.config  fail_test18.config  fail_test19.config  fail_test2.config  fail_test20.config  fail_test21.config  fail_test22.config  fail_test3.config  fail_test5.config  fail_test6.config  fail_test7.config  fail_test8.config  fail_test9.config  good_config.config
